--- a/src/app/components/addlands/addlands.component.html
+++ b/src/app/components/addlands/addlands.component.html
@@ -182,9 +182,9 @@
                                                         <div class="col-sm-12">
                                                             <input style="border-radius: 30px 30px 30px 30px;"
                                                                 type="text" id="PricePM" class="form-control"
-                                                                value="{{cal}}" placeholder="ราคาต่อตารางวา"
+                                                                value="{{cal | number}}" placeholder="ราคาต่อตารางวา"
                                                                 name="PricePM" required
-                                                                [(ngModel)]="credentials.PriceWA" disabled>
+                                                                 readonly>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -240,6 +240,7 @@
                                                                 <div class="col-sm-10">
                                                                     <input style="border-radius: 30px 30px 30px 30px;"
                                                                         type="text" id="LandWA" class="form-control"
+                                                                        (change)="calPWA()"
                                                                         placeholder="ตารางวา" name="LandWA" required
                                                                         [(ngModel)]="credentials.LandWA">
                                                                 </div>
@@ -559,9 +560,9 @@
                                                                 </div>
                                                                 <div class="col-sm-4">
                                                                     <select style="border-radius: 30px 30px 30px 30px;"
-                                                                        id="LProvince" class="form-control"
-                                                                        name="LProvince" required
-                                                                        [(ngModel)]="LProvince"
+                                                                        id="province" class="form-control"
+                                                                        name="province" required
+                                                                        [(ngModel)]="province"
                                                                         (ngModelChange)="selectprovince($event)">
                                                                         <option>- จังหวัด -</option>
                                                                         <option *ngFor="let p of province"
@@ -581,8 +582,8 @@
                                                                 </div>
                                                                 <div class="col-sm-8">
                                                                     <select style="border-radius: 30px 30px 30px 30px;"
-                                                                        id="LAmphur" class="form-control" name="LAmphur"
-                                                                        required [(ngModel)]="LAmphur"
+                                                                        id="amphur" class="form-control" name="amphur"
+                                                                        required [(ngModel)]="amphur"
                                                                         (ngModelChange)="selectamphur($event)">
                                                                         <option>- อำเภอ -</option>
                                                                         <option *ngFor="let a of amphur" [ngValue]="a">
@@ -601,9 +602,9 @@
                                                                 </div>
                                                                 <div class="col-sm-4">
                                                                     <select style="border-radius: 30px 30px 30px 30px;"
-                                                                        id="LDistrict" class="form-control"
-                                                                        name="LDistrict" required
-                                                                        [(ngModel)]="LDistrict"
+                                                                        id="district" class="form-control"
+                                                                        name="district" required
+                                                                        [(ngModel)]="district"
                                                                         (ngModelChange)="selectdistrict($event)">
                                                                         <option>- ตำบล -</option>
                                                                         <option *ngFor="let d of district"
