--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
       <div class="col-xs-12- col-sm-6 col-md-12 ">
         <header class="text-center">
           <img
-            src="http://www.landvist.xyz/images/Defult/Defult.png"
+            src="http://www.landvist.xyz/images/Defult/LOGO.png"
             width="300" height="250" alt="">
           <h3>ลงชื่อเข้าใช้งาน</h3>
           <div>ใช้บัญชี PropertyMB ของคุณ</div>
