--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -20,10 +20,11 @@
 
     <div class="col-md-4 ">
       <div class="col-xs-12- col-sm-6 col-md-12 ">
+      
         <header class="text-center">
-          <img
-            src="http://www.landvist.xyz/images/Defult/Defult.png"
-            width="300" height="250" alt="">
+            <img
+            src="http://www.landvist.xyz/images/Defult/LOGO.png"
+            width="300px" height="250px" alt="">
           <h3>สร้างบัญชี</h3>
           <div>สร้างบัญชี PropertyMBW </div>
         </header>
