--- a/src/app/components/addhouse/addhouse.component.html
+++ b/src/app/components/addhouse/addhouse.component.html
@@ -96,19 +96,19 @@
                                             <div class="col-md-8 ">
                                                 <div class="row">
                                                     <div class="col-sm-4">
-                                                        <input style="border-radius: 30px 30px 30px 30px;" type="text"
+                                                        <input style="border-radius: 30px 30px 30px 30px;" type="number"
                                                             id="SellPrice" class="form-control"
                                                             placeholder="ราคาขาย (ที่คนขายกำหนด)" name="SellPrice"
                                                             required [(ngModel)]="credentials.SellPrice">
                                                     </div>|
                                                     <div class="col-sm-4">
-                                                        <input style="border-radius: 30px 30px 30px 30px;" type="text"
+                                                        <input style="border-radius: 30px 30px 30px 30px;" type="number"
                                                             id="Costestimate" class="form-control"
                                                             placeholder="ราคาประเมิน(ธนาคารประเมิน)" name="Costestimate"
                                                             required [(ngModel)]="credentials.Costestimate">
                                                     </div>|
                                                     <div class="col-sm-3">
-                                                        <input style="border-radius: 30px 30px 30px 30px;" type="text"
+                                                        <input style="border-radius: 30px 30px 30px 30px;" type="number"
                                                             id="MarketPrice" class="form-control" placeholder="ราคาตลาด"
                                                             name="MarketPrice" required
                                                             [(ngModel)]="credentials.MarketPrice">
