--- a/src/app/components/addlands/addlands.component.html
+++ b/src/app/components/addlands/addlands.component.html
@@ -122,7 +122,7 @@
                                                         </div>
                                                         <div class="col-sm-12">
                                                             <input style="border-radius: 30px 30px 30px 30px;"
-                                                                type="text" id="SellPrice" class="form-control"
+                                                                type="number" id="SellPrice" class="form-control"
                                                                 (change)="selectprovince($event.target.value)"
                                                                 placeholder="ราคาขาย (ที่คนขายกำหนด)" name="SellPrice"
                                                                 required [(ngModel)]="credentials.SellPrice">
@@ -137,7 +137,7 @@
                                                         </div>
                                                         <div class="col-sm-12">
                                                             <input style="border-radius: 30px 30px 30px 30px;"
-                                                                type="text" id="CostestimateB" class="form-control"
+                                                                type="number" id="CostestimateB" class="form-control"
                                                                 placeholder="ราคาประเมิน(ธนาคารประเมิน)"
                                                                 name="Costestimate" required
                                                                 [(ngModel)]="credentials.CostestimateB">
@@ -152,7 +152,7 @@
                                                         </div>
                                                         <div class="col-sm-12">
                                                             <input style="border-radius: 30px 30px 30px 30px;"
-                                                                type="text" id="Costestimate" class="form-control"
+                                                                type="number" id="Costestimate" class="form-control"
                                                                 placeholder="ราคาประเมิน(กรมที่ดินประเมิน)"
                                                                 name="Costestimate" required
                                                                 [(ngModel)]="credentials.Costestimate">
