--- a/src/app/components/houses/houses-detail/houses-detail.component.html
+++ b/src/app/components/houses/houses-detail/houses-detail.component.html
@@ -239,9 +239,9 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-3">ละติจูต: <input class="form-control" disabled type="text" id="latitude"
-                      value='{{house.Latitude}}' name="latitude"> </div>
+                      value='{{lat}}' name="latitude"> </div>
                   <div class="col-sm-3">ลองจิจูต: <input class="form-control" disabled type="text" id="longitude"
-                      value='{{house.Longitude}}' name="longitude"> </div>
+                      value='{{lng}}' name="longitude"> </div>
                 </div>
 
               </div>
