--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bd-light " >
     <a class="navbar-brand" routerLink="/index">
-        <img src="https://scontent.fcnx1-1.fna.fbcdn.net/v/t1.15752-9/59273882_593418344511413_1414149515857887232_n.png?_nc_cat=106&_nc_ht=scontent.fcnx1-1.fna&oh=94fdf0248350650f1172181dc1bef123&oe=5D6C78E0" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="http://www.landvist.xyz/images/Defult/Navbar.png" width="30" height="30" class="d-inline-block align-top" alt="">
         PropertyMB
       </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
